# proc-macro-workshop

./: Cargo.toml  flake.nix
.direnv/: flake-profile-1-link
builder/: Cargo.toml
builder/src/: lib.rs
builder/tests/: progress.rs
