[package]
name = "proc-macro-workshop"
version = "0.0.0"
edition = "2021"
publish = false

[workspace]
[workspace.dependencies]
quote = "1.0.36"
syn = "2.0.74"

[[bin]]
name = "workshop"
path = "main.rs"

[dependencies]
bitfield = { path = "bitfield" }
derive_builder = { path = "builder" }
derive_debug = { path = "debug" }
sorted = { path = "sorted" }
seq = { path = "seq" }
